--- a/v1.6.4
+++ b/v1.6.4
@@ -97,7 +97,7 @@ local function showConfirmation()
 
     YesButton.MouseButton1Click:Connect(function()
         ConfirmGui:Destroy()
-        loadstring(game:HttpGet("https://raw.githubusercontent.com/Kaanfriztche/Sydearr-Hub-TA/refs/heads/main/V1.6.4"))()
+        loadstring(game:HttpGet("https://raw.githubusercontent.com/Kaanfriztche/Sydearr-Hub-TA/refs/heads/main/obfuscated.lua"))()
     end)
 
     NoButton.MouseButton1Click:Connect(function()
@@ -108,7 +108,7 @@ end
 -- Mobile Buton
 MobileButton.MouseButton1Click:Connect(function()
     ScreenGui:Destroy()
-    loadstring(game:HttpGet("https://raw.githubusercontent.com/Kaanfriztche/Sydearr-Hub-TA/refs/heads/main/V1.6.4"))()
+    loadstring(game:HttpGet("https://raw.githubusercontent.com/Kaanfriztche/Sydearr-Hub-TA/refs/heads/main/obfuscated.lua"))()
 end)
 
 -- PC Buton
